# Bug-Repro

./: pyproject.toml
bug_repro/: main.py  pyproject.toml
dependency/: pyproject.toml
dependency/src/dependency/: main.py
