[project]
name = "bug-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency>=0.1.0"
]

[tool.uv.sources]
dependency = { git = "https://github.com/Jonas-Puksta-Sensmetry/Bug-Repro.git", subdirectory = "dependency", branch = "dependency-update" }